--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<input type="search" id="site-search" placeholder="Search Your Travel Destination">
 					<button class="btn search__btn _icon-search"> Search</button>
 				</div>
-				<a class="header__scroll" href="page/page-maine.html">Scroll Down</a>
+				<a class="header__scroll" href="page/page-main.html">Scroll Down</a>
 			</div>
 
 		</header>
